# altro

./: .gitignore  CMakeLists.txt  README.md  package.xml
applications/: CMakeLists.txt  main.cpp  main_bicycle.cpp
include/altro/: altro_solver.hpp  exceptions.hpp  typedefs.hpp
install/: altroConfig.cmake.in
src/altro/: CMakeLists.txt  altro_solver.cpp
src/altro/solver/: CMakeLists.txt  cones.hpp  exceptions.cpp  solver.cpp  solver.hpp
src/altro/solver/test/: CMakeLists.txt
test/: quadruped_quaternion_test.json  scotty_mpc.json  simple_quaternion_track_test.json  test_utils.cpp  test_utils.hpp
